tests/do/tmp/10_invalid_import_decl.stderr
error[InvalidImportDecl]: 导入声明语法无效
 --> /._/doc/do/tests/do/cases/err/10_invalid_import_decl.do:3:39
 hint: 使用 `{item, ...} := @("path")`; 冲突名(关键字)需显式重命名.
 3 |     fd_write(i32, WasiIovec, i32, i32),
   |                                       ^
